# rust-experimental

./: .gitignore
atm/: Cargo.toml
atm/src/: main.rs
crawler/: Cargo.toml  Dockerfile
crawler/src/: error.rs  file.rs  input.rs  link.rs  location.rs  main.rs  markup.rs  node.rs  page.rs  trail.rs  utils.rs
crawler/src/addr/: entrypoint.rs  link.rs  mod.rs
crawler/src/fs/: location.rs
crawler/src/html/: markup.rs  mod.rs  node.rs
crawler/src/storage/: file.rs  location.rs  mod.rs
crawler/src/url/: entrypoint.rs  link.rs
database/: Cargo.toml
database/src/: client.rs  common.rs  lib.rs  server.rs
database/src/engines/: default.rs  mod.rs
database/tests/: cli.rs  store.rs
hello_cargo/: Cargo.toml
jobs/: Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yml
jobs/apps/api/: Cargo.toml
jobs/apps/api/src/: error.rs  main.rs
jobs/apps/api/src/routes/: auth.rs  jobs.rs  mod.rs
jobs/apps/client/: Dockerfile  package.json
jobs/apps/client/public/: index.html
jobs/apps/client/src/: api.js  guards.js  index.js  paths.js
jobs/apps/client/src/components/form/: Error.js  Input.js
jobs/apps/client/src/components/service/: Field.js  Page.js  index.js
jobs/apps/client/src/context/: index.js  user.js
jobs/apps/client/src/hooks/: index.js  useClickOutside.js  usePersistedState.js
jobs/apps/client/src/pages/: Jobs.js  SignIn.js  index.js
jobs/apps/manager/: Cargo.toml
jobs/apps/manager/src/: main.rs
jobs/apps/parser/: Cargo.toml
jobs/apps/parser/src/: main.rs  worker.rs
jobs/libs/common/: Cargo.toml
jobs/libs/common/src/: identity.rs  job.rs  lib.rs  remote.rs  source_type.rs
jobs/libs/sources/: Cargo.toml
jobs/libs/sources/src/: lib.rs  page.rs
jobs/libs/sources/src/sources/: mod.rs  stackoverflow.rs
jobs/libs/store/: Cargo.toml
jobs/libs/store/src/: collection.rs  db.rs  error.rs  lib.rs
jobs/migrations/: 000001_jobs.up.sql  000002_job_remote.down.sql  000002_job_remote.up.sql  000003_tags_array.down.sql  000003_tags_array.up.sql  000004_remote_unknown.down.sql  000004_remote_unknown.up.sql  000005_source_field.down.sql  000005_source_field.up.sql  000006_users.up.sql
kvs/: Cargo.toml
kvs/benches/: set.rs
kvs/src/: kv.rs  lib.rs
kvs/tests/: tests.rs
lifetimes/: Cargo.toml
lifetimes/src/: main.rs
playground/: Cargo.toml
playground/src/: main.rs
redux/: Cargo.toml
redux/src/: lib.rs
redux/tests/: combine.rs  counter.rs  middleware.rs  replace.rs  subscription.rs
rustlings-solutions/: quiz1.rs
rustlings-solutions/clippy/: clippy1.rs
rustlings-solutions/collections/: hashmap1.rs  hashmap2.rs
rustlings-solutions/conversions/: from_into.rs  from_str.rs  try_from_into.rs
rustlings-solutions/enums/: enums3.rs
rustlings-solutions/error_handling/: errorsn.rs  result1.rs
rustlings-solutions/option/: option2.rs
rustlings-solutions/primitive_types/: primitive_types3.rs
rustlings-solutions/standard_library_types/: arc1.rs  box1.rs  iterators1.rs  iterators2.rs  iterators3.rs  iterators4.rs
rustlings-solutions/structs/: structs1.rs  structs3.rs
rustlings-solutions/tests/: tests3.rs
rustlings-solutions/threads/: threads1.rs
rustlings-solutions/traits/: traits1.rs  traits2.rs
rustlings-solutions/variables/: variables4.rs
serde-server/: Cargo.toml
serde-server/src/: main.rs
