[package]
name = "crawler"
version = "0.1.0"
authors = ["Ivan <aiven715@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0" }
scraper = { version = "0.12.0" }
surf = { version = "2.1.0" }
