[package]
name = "crawler"
version = "0.1.0"
authors = ["Ivan <aiven715@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-recursion = "0.2"
async-std = "1.9.0"
clap = "2.33.3"
scraper = "0.12.0"
surf = "2.1.0"
url = "2.2.1"
