[package]
name = "database"
version = "0.1.0"
authors = ["Ivan <aiven715@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
