[package]
name = "parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../libs/common" }
sources = { path = "../../libs/sources" }
store = { path = "../../libs/store" }
anyhow = "1.0"
log = "0.4.14"
simplelog = "0.10.0"
tokio = { version = "0.2", features = ["full"] }
