[package]
name = "common"
version = "0.1.0"
edition = "2018"

[dependencies]
derive_more = { version = "0.99.14", features = ["display"] }
postgres = "0.17"
postgres-types = { version = "0.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.2.1", features = ["serde"] }
